@@ -52,7 +52,7 @@ import com.julianEngine.utility.Log;
  */
 public class Engine2D extends JFrame implements WindowListener, KeyListener {
 	/*--------Public Static Variables-------*/
-	public static String versionID = "a1.2.6"; //Engine version
+	public static String versionID = "a1.2.6.2"; //Engine version
 	public static JDFMaster masterFile; //Variable holder for the master plugin file (see JDFMaster)
 	public static ArrayList<JDFPlugin> pluginFiles; //ArrayList holder for each plugin file (see JDFPlugin)
 	public static boolean debugMode = true; //Should the engine be run in debug mode (set to false for release)
